@@ -3,11 +3,13 @@ package org.yangxin.test.jvm.gc;
 /**
  * 垃圾回收算法-引用计数算法
  * testGC()方法执行后，objA和objB会不会被GC呢？
+ * -XX:+PrintGCDetails
  *
  * @author yangxin
  * 2019/11/12 17:49
  */
 public class ReferenceCountingGC {
+
     public Object instance = null;
 
     private static final int _1MB = 1024 * 1024;
